objects/BMCServiceDesk__BMC_Mainframe__c.object
<CustomObject>
    <description>BMC_Mainframe. CMDB Class used to store information about mainframe computer systems. A mainframe is a very large computer capable of supporting hundreds, or even thousands, of users simultaneously.   This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__AvailableCPs__c</fullName>
        <label>Available CPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFAs__c</fullName>
        <label>Available IFAs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFCs__c</fullName>
        <label>Available IFCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFLs__c</fullName>
        <label>Available IFLs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__GridLocation__c</fullName>
        <label>Grid Location</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledCPUs__c</fullName>
        <label>Installed CPUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledCPs__c</fullName>
        <label>Installed CPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstalledDASD__c</fullName>
        <label>Installed DASD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberChannels__c</fullName>
        <label>Number Of Channels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfLPARS__c</fullName>
        <label>Number Of LPARS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PhysicalMemory__c</fullName>
        <label>Physical Memory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mainframe</label>
    <nameField>
        <label>BMC_Mainframe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mainframes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>